# lablove

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README  TODO  basic_command_line.lua  basic_defines.lua  default.lua  header.nmlx  howto.html  howto.nml  index.nml  install.html  license.html  motivation.html  motivation.nml  publications.html  publications.nml  resources.cfg  screenshot.html
CMakeModules/: .FindLua.cmake.swp  FindArtist.cmake  FindFreeType.cmake  FindLua.cmake  FindPycasso.cmake
experiments/: alifeXI.lua  battle.lua  biomorphs.lua  catsmice.lua  eaters.lua  foragers.lua  gener_eaters.lua  hex.lua  poison.lua  poison_buf.lua  poison_fix.lua  poison_from_scratch.lua  predprey.lua  programed_eaters.lua  programed_foragers.lua  programed_poison.lua  programed_targets.lua  synch.lua  targets.lua
experiments/aux/: basic_command_line.lua
experiments/scripts/: basic_defines.lua
gridbrain/: CMakeLists.txt
gridbrain/include/: CompAMP.h  CompAND.h  CompAVG.h  CompCLK.h  CompCLKG.h  CompDMUL.h  CompEQ.h  CompGTZ.h  CompIN.h  CompINV.h  CompMAX.h  CompMEM.h  CompMIN.h  CompMOD.h  CompMUL.h  CompNEG.h  CompNOT.h  CompNUL.h  CompOUT.h  CompRAND.h  CompSEL.h  CompSUM.h  CompTMEM.h  CompZERO.h  Component.h  ComponentSet.h  Connection.h  Coord.h  Gene.h  GeneTag.h  Grid.h  GridCoord.h  Gridbrain.h  GridbrainComponent.h  GridbrainComponentSet.h  GridbrainConnection.h  GridbrainGeneTag.h  GridbrainLua.h  Orbit.h  RandDistManager.h  (+3 more)
gridbrain/mtwist/: mtwist.c  mtwist.h  randistrs.c
gridbrain/src/: CompAMP.cpp  CompAND.cpp  CompAVG.cpp  CompCLK.cpp  CompCLKG.cpp  CompDMUL.cpp  CompEQ.cpp  CompGTZ.cpp  CompIN.cpp  CompINV.cpp  CompMAX.cpp  CompMEM.cpp  CompMIN.cpp  CompMOD.cpp  CompMUL.cpp  CompNEG.cpp  CompNOT.cpp  CompNUL.cpp  CompOUT.cpp  CompRAND.cpp  CompSEL.cpp  CompSUM.cpp  CompTMEM.cpp  CompZERO.cpp  Component.cpp  ComponentSet.cpp  Connection.cpp  Coord.cpp  Gene.cpp  GeneTag.cpp  Grid.cpp  GridCoord.cpp  Gridbrain.cpp  GridbrainComponent.cpp  GridbrainConnection.cpp  GridbrainGeneTag.cpp  GridbrainMutations.cpp  GridbrainRecombine.cpp  GridbrainWrite.cpp  RandDistManager.cpp
gridbrain/tests/: Main.cpp  TestGrid.cpp  TestGridCoord.cpp  TestGridbrain.cpp  TestGridbrainComponentSet.cpp  TestGridbrainComponents.cpp  TestGridbrainMutations.cpp  TestGridbrainRecombine.cpp  TestSimulation.cpp  TestSymbolBitString.cpp  TestSymbolFixedString.cpp  TestSymbolRGB.cpp
html/: footer.nmlx  header.nmlx  howto.html  howto.nml  index.html  index.nml  install.html  install.nml  license.html  license.nml  style.css
media/: OgreDebugPanel.overlay
media/LoveSkin/: LoveLook.imageset  LoveLook.looknfeel  LoveLookSkin.scheme
media/gui/: qgui.material
src/: Agent.cpp  Agent.h  AgentGB.cpp  AgentGB.h  AnimatSimple2D.cpp  AnimatSimple2D.h  Brain.cpp  Brain.h  Chemistry.cpp  Chemistry.h  CompACT.cpp  CompACT.h  CompPER.cpp  CompPER.h  Console.cpp  Console.h  DummyBrain.cpp  DummyBrain.h  Fitness.cpp  Fitness.h  Font.cpp  Font.h  FontVera8.h  FontVeraMono8.h  Goal.cpp  Goal.h  Graphic.cpp  Graphic.h  Graphic2D.cpp  Graphic2D.h  Graphic2DBiomorph.cpp  Graphic2DBiomorph.h  Graphic2DGradient.cpp  Graphic2DGradient.h  Graphic2DSquare.cpp  Graphic2DSquare.h  Graphic2DTriangle.cpp  Graphic2DTriangle.h  GraphicBiomorph.cpp  GraphicBiomorph.h  (+158 more)
src/QuickGUI/: QuickGUI.h  QuickGUIButton.cpp  QuickGUIButton.h  QuickGUIComboBox.cpp  QuickGUIComboBox.h  QuickGUIEventArgs.cpp  QuickGUIEventArgs.h  QuickGUIImage.cpp  QuickGUIImage.h  QuickGUIKeyCode.h  QuickGUILabel.cpp  QuickGUILabel.h  QuickGUIList.cpp  QuickGUIList.h  QuickGUIListItem.cpp  QuickGUIListItem.h  QuickGUIManager.cpp  QuickGUIManager.h  QuickGUIMemberFunctionPointer.h  QuickGUIMenu.cpp  QuickGUIMenu.h  QuickGUIMenuList.cpp  QuickGUIMenuList.h  QuickGUIMouseButtonID.h  QuickGUIMouseCursor.cpp  QuickGUIMouseCursor.h  QuickGUINStateButton.cpp  QuickGUINStateButton.h  QuickGUIPanel.cpp  QuickGUIPanel.h  QuickGUIPrerequisites.h  QuickGUIProgressBar.cpp  QuickGUIProgressBar.h  QuickGUISheet.cpp  QuickGUISheet.h  QuickGUIText.cpp  QuickGUIText.h  QuickGUITextBox.cpp  QuickGUITextBox.h  QuickGUITextCursor.cpp  (+7 more)
src/comps/: CompAMP.cpp  CompAMP.h  CompAND.cpp  CompAND.h  CompAVG.cpp  CompAVG.h  CompCLK.cpp  CompCLK.h  CompDMUL.cpp  CompDMUL.h  CompEQ.cpp  CompEQ.h  CompGTZ.h  CompIN.h  CompINV.cpp  CompINV.h  CompMAX.cpp  CompMAX.h  CompMIN.cpp  CompMIN.h  CompMOD.h  CompMUL.cpp  CompMUL.h  CompNEG.h  CompNOT.cpp  CompNOT.h  CompNUL.h  CompOUT.cpp  CompOUT.h  CompRAND.cpp  CompRAND.h  CompSEL.cpp  CompSEL.h  CompSUM.h  CompZERO.cpp  CompZERO.h  comps.h
src/layer/: Image.cpp  Image.h  ImageSDLOpenGL.cpp  ImageSDLOpenGL.h  Screen.cpp  Screen.h  ScreenManager.cpp  ScreenManager.h  ScreenSDLOpenGL.cpp  ScreenSDLOpenGL.h  layer.h  types.h
src/mtwist/: mtwist.h  randistrs.h
src/old_code/: PopDynSpecies.h
src/tests/: TestGrid.cpp  TestGridbrain.cpp  TestGridbrainComponentSet.cpp  TestGridbrainComponents.cpp  TestGridbrainMutations.cpp  TestLab.cpp  TestSim2D.cpp  TestSimCont2D.cpp  TestSimulation.cpp  TestSymbolBitString.cpp  TestSymbolFixedString.cpp  TestSymbolFloat.cpp  TestSymbolRGB.cpp
tools/fontconv/: main.cpp
worlds/: simple_generations.lua
